--- a/css/drink.css
+++ b/css/drink.css
@@ -1,6 +1,82 @@
 @import "reset.css";
-
-#title {
+.container {
+  width: 100%;
+}
+/* menu 항목 */
+.container .menu {
+  background: #f6f5ef;
+  border-bottom: 1px solid #e5e5e5;
+  border-top: 2px solid #000;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 120px;
+  z-index: 99;
+}
+.menu .menu-inner {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 120px;
+  width: 1100px;
+}
+.menu-inner .logo {
+  height: 75px;
+  width: 75px;
+  z-index: 12;
+}
+.logo a {
+  background: url(../images/logo.png);
+  display: block;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+.menu-nav {
+  width: 80%;
+}
+.menu-nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu-nav ul li {
+  font: normal 20px Avenir, Arial, georgia;
+  color: #333;
+}
+/* sub 부분 */
+.container .sub {
+  margin-top: 150px;
+  width: 100%;
+  height: 98px;
+  background: #fff;
+}
+.sub .sub-inner {
+  width: 1100px;
+  height: 90px;
+  margin: 0 auto;
+  position: relative;
+}
+.sub-inner #title {
   font-size: 32px;
   font-weight: bold;
 }
+.sub-inner .maps {
+  position: absolute;
+  right: 0;
+  top: 60px;
+}
+.maps li {
+  vertical-align: middle;
+  float: left;
+  height: 16px;
+  line-height: 16px;
+  margin: 0 2.5px;
+}
+.maps .map-drink {
+  color: #222;
+}
+
+/* Container 부분 */
