--- a/css/reset.css
+++ b/css/reset.css
@@ -122,3 +122,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+a {
+  text-decoration: none;
+  color: #666;
+  background:transparent
+  cursor: pointer;
+}
