--- a/css/gift.css
+++ b/css/gift.css
@@ -1,3 +1,4 @@
+@import "reset.css";
 body {
   box-sizing: border-box;
   display: flex;
@@ -39,4 +40,3 @@ section {
   bottom: 60px;
   left: 20px;
 }
-
