--- a/css/reset.css
+++ b/css/reset.css
@@ -5,12 +5,6 @@ span,
 applet,
 object,
 iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
 p,
 blockquote,
 pre,
@@ -125,6 +119,6 @@ table {
 a {
   text-decoration: none;
   color: #666;
-  background:transparent
+  background: transparent;
   cursor: pointer;
 }
