--- a/css/drink.css
+++ b/css/drink.css
@@ -28,7 +28,7 @@
   z-index: 12;
 }
 .logo a {
-  background: url(../images/logo.png);
+  background: url(../img/nav/logo.png);
   display: block;
   height: 100%;
   width: 100%;
