--- a/css/gift.css
+++ b/css/gift.css
@@ -1,7 +1,7 @@
 :root {
   /* color */
   --green-color: #006633;
-  --beige--color: #F4F4F1;
+  --beige--color: #f4f4f1;
 }
 
 button {
@@ -9,6 +9,12 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
 }
 
 a {
@@ -41,7 +47,7 @@ h2 {
 
 .title {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-items: flex-start;
   width: 1000px;
 }
@@ -70,6 +76,9 @@ h2 {
   margin-right: 5px;
 }
 
+.search__btn button:hover {
+  text-decoration: underline;
+}
 
 .search__btn .active {
   background-color: var(--green-color);
@@ -84,7 +93,7 @@ h2 {
 
 .search__moreBtn {
   position: absolute;
-  top:15px;
+  top: 15px;
   right: 30px;
   font-size: 20px;
   width: 45px;
@@ -128,7 +137,7 @@ h2 {
   z-index: 1;
 }
 
-.item .item__img{
+.item .item__img {
   transition: all 300ms ease-in;
   cursor: pointer;
   margin-top: 50px;
@@ -151,4 +160,3 @@ h2 {
   bottom: 60px;
   left: 20px;
 }
-
