--- a/css/gift.css
+++ b/css/gift.css
@@ -1,7 +1,8 @@
 :root {
   /* color */
   --green-color: #006633;
-  --beige--color: #f4f4f1;
+  --beige--color: #f4f4f2;
+  --black-color: #3f4141;
 }
 
 * {
@@ -22,7 +23,7 @@ li {
 }
 
 a {
-  color: black;
+  color: var(--black-color);
   text-decoration: none;
 }
 
@@ -32,6 +33,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 30px;
 }
 
 .container {
@@ -42,17 +44,32 @@ span {
   font-size: 15px;
 }
 
-h2 {
+.search h2 {
   font-size: 18px;
   border-bottom: 1px solid #ccc;
   width: 100%;
   padding-bottom: 25px;
+  color: var(--black-color);
 }
 
 .title {
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  color: var(--black-color);
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.title span {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.title a:hover {
+  text-decoration: underline;
 }
 
 .search {
@@ -76,6 +93,7 @@ h2 {
   border-radius: 4px;
   background-color: var(--beige--color);
   margin-right: 5px;
+  color: var(--black-color);
 }
 
 .search__btn button:hover {
@@ -91,6 +109,7 @@ h2 {
   font-size: 13px;
   max-width: 800px;
   margin: 10px;
+  color: var(--black-color);
 }
 
 .search__checkbox button::before {
@@ -100,7 +119,6 @@ h2 {
   width: 10px;
   margin-right: 5px;
   border: 1px solid #ccc;
-  /* position: relative; */
 }
 
 .search__checkbox button .active::before {
@@ -113,14 +131,15 @@ h2 {
 }
 
 .search__moreBtn {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   font-size: 20px;
+  color: var(--black-color);
   background-color: var(--beige--color);
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 20px;
+  right: 30px;
 }
 
 .items.invisible {
@@ -137,13 +156,14 @@ h2 {
 .items__title {
   height: 60px;
   padding: 20px;
-  border-radius: 6px;
+  border-radius: 3px;
   background-color: var(--beige--color);
   font-size: 18px;
   z-index: 1;
   display: flex;
   align-items: center;
   margin-top: 70px;
+  color: var(--black-color);
 }
 
 .item__container {
@@ -168,7 +188,7 @@ h2 {
 .item .item__img {
   transition: all 300ms ease-in;
   cursor: pointer;
-  margin-top: 80px;
+  margin-top: 40px;
 }
 
 .item .item__img:hover {
