--- a/css/reset.css
+++ b/css/reset.css
@@ -79,6 +79,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  background: transparent;
 }
 
 article,
@@ -94,9 +95,7 @@ nav,
 section {
   display: block;
 }
-body {
-  line-height: 1;
-}
+
 ol,
 ul {
   list-style: none;
@@ -121,4 +120,12 @@ a {
   color: #666;
   background: transparent;
   cursor: pointer;
+}
+body {
+  font-family: "nbg", "맑은 고딕", HelveticaNeue, DroidSans, Sans-serif,
+    Helvetica;
+  font-size: 1em;
+  line-height: 1;
+  min-width: 320px;
+  overflow-x: hidden;
 }
