--- a/css/drink.css
+++ b/css/drink.css
@@ -1,4 +1,5 @@
 @import "reset.css";
+@import "footer.css";
 /* * {
   box-sizing: border-box;
 } */
@@ -229,104 +230,3 @@
 }
 
 /* footer 부분 */
-#footer {
-  padding: 32px 0 35px 0;
-  background: #2c2a29;
-  position: relative;
-  width: 100%;
-}
-
-.footer_wrap {
-  margin-left: -550px;
-  width: 1100px;
-  background: url(https://www.starbucks.co.kr/common/img/footer/footer_logo.png)
-    right 8px no-repeat;
-  display: inline-block;
-  left: 50%;
-  position: relative;
-}
-.footer_menus ul {
-  width: 220px;
-  float: left;
-}
-.footer_menus ul li a {
-  color: #fff;
-  font-size: 12px;
-  line-height: 24px;
-}
-.footer_menus ul .footer_menus_title a {
-  font-size: 14px;
-  line-height: 40px;
-  text-transform: uppercase;
-}
-.footer_award {
-  height: 80px;
-  margin-top: 40px;
-  background: #282828;
-  position: relative;
-  width: 100%;
-}
-
-.footer_award .footer_award_inner {
-  height: 64px;
-  margin-left: -567px;
-  top: 8px;
-  width: 1134px;
-  left: 50%;
-  position: absolute;
-}
-
-.footer_award_inner ul {
-  display: inline-block;
-}
-.footer_award_inner ul li {
-  float: left;
-}
-
-.copyright {
-  color: #999;
-  font-size: 12px;
-  line-height: 18px;
-  margin-left: -50%;
-  padding-top: 30px;
-  text-align: center;
-  width: 100%;
-  left: 50%;
-  position: relative;
-}
-.copyright a {
-  border-right: 1px solid #393939;
-  color: #ccc;
-  font-size: 12px;
-  padding: 0 10px;
-}
-.copyright .first {
-  color: #00b050 !important;
-  font-weight: bold;
-}
-.copyright .btn_link {
-  background: none;
-  border: 2px solid #fff;
-  border-radius: 3px;
-  color: #fff;
-  display: inline-block;
-  font-size: 12px;
-  margin: 10px 2px 0 3px;
-  width: 90px;
-  height: 30px;
-  line-height: 30px;
-}
-.copy_menu {
-  padding: 25px 0 5px 0;
-  margin: 0 auto;
-  text-align: center;
-}
-.copy_menu li {
-  line-height: 1.3;
-  display: inline-block;
-  margin: 0 7px;
-}
-.copyright .copy {
-  display: inline-block;
-  line-height: 40px;
-}
