--- a/css/drink.css
+++ b/css/drink.css
@@ -7,48 +7,52 @@
   width: 100%;
 }
 /* menu 항목 */
-.container .menu {
-  background: #f6f5ef;
-  border-bottom: 1px solid #e5e5e5;
-  border-top: 2px solid #000;
+.header-layout {
+  width: 100%;
+  height: 120px;
   left: 0;
   position: fixed;
   top: 0;
-  width: 100%;
-  height: 120px;
+  background-color: #f6f5ef;
+  border-top: 2px solid #000;
+  border-bottom: 1px solid #e5e5e5;
   z-index: 99;
 }
-.menu .menu-inner {
+.contents-layout {
+  max-width: 1100px;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 120px;
-  width: 1100px;
 }
-.menu-inner .logo {
-  height: 75px;
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  background: url("https://www.starbucks.co.kr/common/img/common/logo.png");
   width: 75px;
-  z-index: 12;
+  height: 75px;
+  margin-top: 22px;
 }
 .logo a {
-  background: url(https://www.starbucks.co.kr/common/img/common/logo.png);
   display: block;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
+  width: 75px;
+  height: 75px;
 }
-.menu-nav {
-  width: 80%;
-}
-.menu-nav ul {
+.gnb ul {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  margin-top: 45px;
 }
-.menu-nav ul li {
-  font: normal 20px Avenir, Arial, georgia;
-  color: #333;
+.gnb ul li {
+  width: auto;
+  height: 20px;
+  padding: 15px 35px 40px 35px;
+  font-size: 18px;
+  text-align: center;
+}
+.gnb ul li:hover {
+  background-color: #2c2a29;
+  text-decoration: underline;
+  color: rgb(107, 153, 67);
 }
 /* sub 부분 */
 .container .sub {
