--- a/css/card.css
+++ b/css/card.css
@@ -46,17 +46,61 @@
     text-decoration: underline;
     color: rgb(107, 153, 67);
 }
-
 .title {
-    height: 91px;
-    line-height: 91px;
+    height: 20px;
+    line-height: 50px;
+}
+.map {
+    text-align: right;
+    padding-bottom: 25px;
+    padding-right: 10px;
+}
+.map a:hover{
+    text-decoration: underline;
 }
 .prd-list {
     border: 1px solid rgb(215, 215, 215);
     border-radius: 4px;
-    height: 150px;
-    padding: 30px;
+    height: 200px;
+    padding: 20px 30px;
+    position: relative;
 }
 .prd-list h3 {
     font-size: 18px;
+    display: inline-block;
+}
+.prd-list img {
+    position:absolute;
+    right: 30px;
+}
+.prd-list .prd-list-lnb:active{
+    background-color: #006633;
+    color: #fff;
+}
+#prd-list-innerline {
+    width: 100%;
+    height: 0.5px;
+    background-color: rgb(215, 215, 215);
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.prd-list-lnb {
+    background-color: #f4f4f1;
+    border-radius: 3px;
+    width: 200px;
+    height: 34px;
+    display: inline-block;
+    margin-right: 10px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 34px;
+    margin-bottom: 20px;
+}
+.prd-list-lnb:hover {
+    text-decoration: underline;
+}
+.prd-list ul li {
+    display: inline-block;
+    font-size: smaller;
 }
