--- a/css/drink.css
+++ b/css/drink.css
@@ -247,4 +247,44 @@
   display: none;
 }
 
-/* footer 부분 */
+/* itemList */
+
+.categoryList {
+  margin-bottom: 40px;
+  width: 1100px;
+}
+
+.list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 10px;
+  column-gap: 23px;
+}
+.item_container {
+  text-align: center;
+}
+.item_container .item_content {
+  height: 280px;
+  overflow: hidden;
+}
+.item_thumbnail {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s linear;
+  cursor: pointer;
+}
+.item_thumbnail:hover {
+  transform: scale(1.1);
+}
+
+.item_description {
+  font-size: 14px;
+  color: #444;
+  height: 54px;
+  line-height: 54px;
+  overflow: hidden;
+}
+.themeList {
+  margin-bottom: 40px;
+  width: 1100px;
+}
