--- a/css/card.css
+++ b/css/card.css
@@ -73,7 +73,11 @@
     position:absolute;
     right: 30px;
 }
-.prd-list .prd-list-lnb:active{
+.prd-list #category {
+    background-color: #006633;
+    color: #fff;
+}
+.prd-list .prd-list-lnb:active {
     background-color: #006633;
     color: #fff;
 }
@@ -96,6 +100,7 @@
     font-size: 14px;
     line-height: 34px;
     margin-bottom: 20px;
+    color: #000;
 }
 .prd-list-lnb:hover {
     text-decoration: underline;
@@ -103,4 +108,47 @@
 .prd-list ul li {
     display: inline-block;
     font-size: smaller;
+}
+.content select {
+    padding: 10px;
+    margin: 20px 0px;
+    border: 1px solid rgb(215, 215, 215);
+    border-radius: 3px;
+    float: right;
+}
+.content h3 {
+    clear: right;
+    background-color: #f4f4f2;
+    padding: 20px 20px;
+    border-radius: 4px;
+}
+.imgwrap img {
+    width: 260px;
+    height: 170px;
+    transition: 0.5s ease-in-out;
+}
+.imgwrap img:hover {
+    transform: scale(1.1);
+}
+.imgwrap ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.imgwrap ul li:nth-child(4n-2) {
+    margin-left: 20px;
+    margin-right: 10px;
+}
+.imgwrap ul li:nth-child(4n-1) {
+    margin-left: 10px;
+    margin-right: 20px;
+}
+.imgwrap dd {
+    text-align: center;
+    font-size: 14px;
+    padding: 20px 0 40px 0;
+}
+.imgwrap dt{
+    overflow: hidden;
+    border-radius: 5px;
 }
