--- a/css/drink.css
+++ b/css/drink.css
@@ -277,11 +277,12 @@
 .item_container .item_content {
   height: 280px;
   overflow: hidden;
+  border-radius: 5px;
 }
 .item_thumbnail {
   width: 100%;
   height: 100%;
-  transition: all 0.5s linear;
+  transition: 0.5s ease-in-out;
   cursor: pointer;
 }
 .item_thumbnail:hover {
@@ -293,7 +294,6 @@
   color: #444;
   height: 54px;
   line-height: 54px;
-  overflow: hidden;
 }
 .themeList {
   margin-bottom: 40px;
