--- a/css/gift.css
+++ b/css/gift.css
@@ -1,15 +1,18 @@
 :root {
   /* color */
-  --green-color: #006633;
-  --yellow-green-color: #639202;
-  --beige--color: #f4f4f2;
-  --black-color: #3f4141;
-  --light-black-color: #2C2A29;
-  --cleam-color: #F6F5EF;
+  --green: #006633;
+  --yellow-green: #639202;
+  --black: #3f4141;
+  --light-black: #2C2A29;
+  --cleam: #F6F5EF;
+  --gray: #7D7D7D;
+  --light-gray: #f4f4f2;
 }
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 button {
@@ -27,131 +30,127 @@ li {
 }
 
 a {
-  color: var(--black-color);
   text-decoration: none;
 }
 
-body {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-}
+/* Header */
 
-.container {
-  width: 100%;
-  padding: 20px;
-}
-
-span {
-  font-size: 15px;
-}
-
-
-/* navbar */
-
-.navbar {
-  background-color: var(--cleam-color);
-  width: 100%;
+header {
+  background-color: var(--cleam);
   position: sticky;
   top:0;
+  left: 0;
   z-index: 2;
+  padding-top: 20px;
 }
 
-.navbar__container {
-  background-color: var(--cleam-color);
-  max-width: 1200px;
-  display: flex;
-  justify-content:space-between ;
+.logo {
+  width: 75px;
+  height: 75px;
+}
+
+nav {
+  width: 80%;
   margin: auto;
-  padding: 20px;
-}
-
-.navbar__menu {
-  background-color: var(--cleam-color);
   display: flex;
-  align-items:center;
-  font-size: 20px;
-  position: relative;
+  justify-content: space-between;
 }
 
-.navbar__menu__item > a{
-  padding: 10px 30px 30px;
-  text-transform: uppercase;
+.menus {
+  display: flex;
+  flex-direction: column;
+  align-items:flex-end;
 }
 
-.navbar__menu__item a:hover {
-  background-color: var(--light-black-color);
+.menus__sub-menu,
+.menus__main-manu {
+  display: flex;
+}
+
+.menus__sub-menu {
+  font-size: 12px;
+  margin: 0 50px 20px;
+  cursor: pointer;
+}
+
+.menus__sub-menu li {
+  color: var(--black);
+}
+
+.menus__sub-menu li:hover {
   text-decoration: underline;
-  color: var(--yellow-green-color);
 }
 
-.navbar__container > ul li{
-  float: left;
-  width: 180px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
+.menus__sub-menu button {
+  background-color: #fff;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  position: relative;
+  top: -4px;
 }
 
-.navbar__container > ul li a {
-  display: block;
+.menus__sub-menu li,
+.menus__sub-menu button {
+  padding: 5px 10px;
+  margin: 0 10px;
 }
 
-.dropdown__item a:hover {
-  background-color: var(--light-black-color);
-  color: var(--yellow-green-color)
+.menus__main-manu li{
+  padding-bottom: 25px;
+  margin: 0 8px;
 }
 
-.dropdown__item {
-  display: none;
-  background-color: var(--light-black-color);
+.menus__main-manu li a {
+  color: var(--black);
+  font-size: 13px;
+  text-transform: uppercase;
+  padding: 20px 20px 29px;
 }
 
-.dropdown__item a {
-  font-size: 16px;
-  color: #999;
+.menus__main-manu li a:hover {
+  text-decoration: underline;
+  color: var(--yellow-green);
+  background-color: var(--light-black);
 }
 
-.navbar__menu__item:hover .dropdown__item {
-  display: block;
-}
-
-
-/* header */
+/* Page title */
 
 .header {
-  width: 100%;
+  width: 80%;
+  margin: auto;
 }
 
 .header__container {
   position: relative;
-  max-width: 1200px;
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  margin: auto;
 }
 
 .header__title {
-  font-size: 38px;
+  font-size: 35px;
   font-weight: 600;
-  color: var(--black-color);
+  color: var(--light-black);
 }
 
 .header__nav {
   position: absolute;
   bottom: 0px;
-  right: 5px;
+  right:0px;
 }
 
-/* search */
+.header__nav a {
+  color: var(--gray);
+  font-size: 13px;
+}
+
+
+/* Search section */
 
 .search {
-  width: 100%;
-  padding: 20px;
+  width: 80%;
+  margin: 16px auto 50px;
 }
 
 .search__container {
@@ -160,16 +159,13 @@ span {
   align-items: flex-start;
   border: 1px solid #ccc;
   border-radius: 4px;
-  padding: 0px 25px;
-  max-width: 1200px;
+  padding: 15px 35px 20px;
   margin: auto;
 }
 
 .search h2 {
   font-size: 18px;
-  color: var(--black-color);
-  position: relative;
-  top: 5px;
+  color: var(--black);
 }
 
 .search__titleAndMorebtn {
@@ -177,7 +173,10 @@ span {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding-bottom: 10px;
+}
+
+.search__titleAndMorebtn.open {
+  margin-bottom: 20px;
 }
 
 .search__upBtn {
@@ -186,10 +185,8 @@ span {
   border-radius: 50%;
   font-size: 18px;
   line-height: 40px;
-  color: var(--black-color);
-  background-color: var(--beige--color);
-  position: relative;
-  top: 5px;
+  color: var(--black);
+  background-color: var(--light-gray);
 }
 
 .searchBtn {
@@ -204,16 +201,16 @@ span {
 .searchBtn__container {
   display: flex;
   text-align: center;
-  padding: 25px 0 15px;
+  padding: 30px 0 20px;
 }
 
 .searchBtn__container button {
   width: 200px;
   height: 35px;
   border-radius: 4px;
-  background-color: var(--beige--color);
+  background-color: var(--light-gray);
   margin-right: 10px;
-  color: var(--black-color);
+  color: var(--black);
 }
 
 .searchBtn__container button:hover {
@@ -221,15 +218,14 @@ span {
 }
 
 .searchBtn__container .active {
-  background-color: var(--green-color);
+  background-color: var(--green);
   color: white;
 }
 
 .search__checkbox {
   font-size: 13px;
   max-width: 800px;
-  margin-bottom: 20px;
-  color: var(--black-color);
+  color: var(--black);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -303,79 +299,65 @@ label {
   margin: 8px;
 }
 
+/* Item section */
 
-/* Items */
+.items {
+  width: 80%;
+  margin: auto;
+  margin-bottom: 20px;
+}
 
-.items.invisible {
+.items__category.invisible {
   display: none;
 }
 
-#items {
-  width: 100%;
-  padding: 20px;
-}
-
-.items__container {
-  max-width: 1200px;
-  margin: auto;
-}
-
-.items__title {
-  height: 60px;
-  padding: 20px;
-  border-radius: 3px;
-  background-color: var(--beige--color);
-  font-size: 18px;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  margin-top: 70px;
-  color: var(--black-color);
-}
-
-.item__container {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
+.items__category-name {
+  font-size: 20px;
+  padding: 15px 20px;
+  border-radius: 4px;
+  background-color: var(--light-gray);
 }
 
 .item {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  gap: 20px;
+  margin: 30px 0 100px;
+}
+
+.item__info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   position: relative;
 }
 
-.item span {
-  z-index: 1;
-}
-
-.item .item__img {
-  transition: all 300ms ease-in;
+.item__info-img {
+  transition: all 250ms ease-in;
   cursor: pointer;
-  margin-top: 40px;
+  width: 250px;
+  margin-bottom: 23px;
 }
 
-.item .item__img:hover {
+.item__info-img:hover {
   transform: scale(1.1);
 }
 
-.new_and_limited img {
-  width: 50px;
-  height: 50px;
-  margin-right: 5px;
+.item__info-name {
+  font-size: 15px;
+  color: var(--black);
+  z-index: 1;
 }
 
-.new_and_limited {
-  display: flex;
-  width: 100%;
+.item__icons {
   position: absolute;
-  bottom: 60px;
-  left: 20px;
+  bottom: 35px;
+  left: 0;
 }
 
-/* footer */
+/* Footer */
+
 #footer {
   padding: 32px 0 35px 0;
   background: #2c2a29;
