--- a/css/gift.css
+++ b/css/gift.css
@@ -1,3 +1,5 @@
+@import url("reset.css");
+
 :root {
   /* color */
   --green: #006633;
@@ -9,28 +11,11 @@
   --light-gray: #f4f4f2;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 button {
   background-color: transparent;
   border: none;
   outline: none;
   cursor: pointer;
-}
-
-ul,
-li {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
 }
 
 /* Header */
@@ -459,4 +444,3 @@ label {
   display: inline-block;
   line-height: 40px;
 }
-@import "footer.css";
