--- a/css/index.css
+++ b/css/index.css
@@ -1,61 +1,7 @@
 @import "reset.css";
 @import "footer.css";
+@import url("header.css");
+
 .container {
   width: 100%;
-}
-/* menu 항목 */
-.header-layout {
-  width: 100%;
-  height: 120px;
-  left: 0;
-  position: fixed;
-  top: 0;
-  background-color: #f6f5ef;
-  border-top: 2px solid #000;
-  border-bottom: 1px solid #e5e5e5;
-  z-index: 99;
-}
-.contents-layout {
-  max-width: 1100px;
-  margin: 0 auto;
-}
-.flex {
-  display: flex;
-  justify-content: space-between;
-}
-.logo {
-  background: url("https://www.starbucks.co.kr/common/img/common/logo.png");
-  width: 75px;
-  height: 75px;
-  margin-top: 22px;
-}
-.logo a {
-  display: block;
-  width: 75px;
-  height: 75px;
-}
-.gnb ul {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 45px;
-}
-.gnb ul li {
-  width: auto;
-  height: 20px;
-  padding: 15px 35px 40px 35px;
-  font-size: 18px;
-  text-align: center;
-}
-.gnb ul li:hover {
-  background-color: #2c2a29;
-  text-decoration: underline;
-  color: rgb(107, 153, 67);
-}
-main {
-  height: auto;
-  background: #fff;
-  text-align: center;
-  width: 1100px;
-  margin: 150px auto 0px;
-  padding-bottom: 90px;
 }
