--- a/css/food.css
+++ b/css/food.css
@@ -223,6 +223,9 @@
   font-weight: bold;
   color: #222;
 }
+.list {
+  display: block;
+}
 .item_list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
