food page에서 버튼을 클릭시 위로 올라가서 a태그 대신 button 태그로 변경

--- a/css/food.css
+++ b/css/food.css
@@ -97,7 +97,7 @@
   top: 30px;
 }
 
-.dt1 a {
+.dt1 button {
   display: block;
   width: 200px;
   height: 35px;
@@ -109,7 +109,7 @@
   font-size: 14px;
   text-align: center;
 }
-.dt1 a:hover {
+.dt1 button:hover {
   text-decoration: underline;
 }
 .dt1 .selected {
@@ -152,7 +152,7 @@
   position: absolute;
   top: 30px;
 }
-.dt2 a {
+.dt2 button {
   display: block;
   width: 200px;
   height: 35px;
@@ -164,7 +164,7 @@
   text-align: center;
   font-weight: 600;
 }
-.dt2 a:hover {
+.dt2 button:hover {
   text-decoration: underline;
 }
 .dt2 .selected {
@@ -193,7 +193,7 @@
   height: 90px;
 }
 
-.service_bn li a {
+.service_bn li button {
   margin: 0;
   padding: 0;
   font-size: 100%;
@@ -203,7 +203,7 @@
   background: transparent;
   cursor: pointer;
 }
-.service_bn li a img {
+.service_bn li button img {
   width: 335px;
   height: 90px;
   border: 2px solid #fff;
@@ -211,7 +211,7 @@
   max-width: 100%;
   border-radius: 7px;
 }
-.service_bn li a .themeSelected {
+.service_bn li button .themeSelected {
   border: 2px solid #006633;
 }
 
