--- a/css/card.css
+++ b/css/card.css
@@ -23,8 +23,8 @@
 .prd-list {
     border: 1px solid rgb(215, 215, 215);
     border-radius: 4px;
-    height: 200px;
-    padding: 20px 30px;
+    height: auto;
+    padding: 15px 30px 15px 30px;
     position: relative;
 }
 .prd-list h3 {
@@ -47,8 +47,7 @@
     width: 100%;
     height: 0.5px;
     background-color: rgb(215, 215, 215);
-    margin-top: 10px;
-    margin-bottom: 30px;
+    margin-top: 15px;
 }
 .prd-list-lnb {
     background-color: #f4f4f1;
@@ -61,6 +60,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 34px;
+    margin-top: 30px;
     margin-bottom: 20px;
     color: #000;
 }
@@ -70,6 +70,13 @@
 .prd-list ul li {
     display: inline-block;
     font-size: smaller;
+}
+#toggle {
+    cursor: pointer;
+    margin-top: 6px;
+}
+#toggle-item.active {
+    display: none;
 }
 .content select {
     padding: 10px;
