--- a/css/index.css
+++ b/css/index.css
@@ -210,7 +210,7 @@
 
 .rolling__box ul li p {
   font-size: 0.875em;
-  line-height: 40px;
+  line-height: 2.5em;
   font-weight: bold;
   cursor: pointer;
 }
@@ -221,4 +221,114 @@
 
 .after_slide {
   transform: translateY(0);
+}
+
+/* reward__wrap style */
+#reward__wrap {
+  background-color: #1e3932;
+  padding: 2.5em 0;
+  color: #fff;
+}
+
+.reward__inner {
+  margin: 0 19.75em;
+  display: flex;
+  justify-content: center;
+  letter-spacing: 0.5px;
+}
+
+.reward__logo {
+  width: 10.94em;
+  margin-right: 3em;
+}
+.reward__logo img {
+  width: 100%;
+}
+.reward__contents {
+  width: 49em;
+}
+.reward__content {
+  position: relative;
+}
+.content__text {
+  padding-bottom: 0.625em;
+  margin-bottom: 1.375em;
+  border-bottom: 1px solid #4a605b;
+  font-size: 1em;
+}
+
+.content__text h2 {
+  font-size: 1.625em;
+  margin: 0;
+  margin-bottom: 1.25em;
+}
+
+.content__text p {
+  line-height: 1.4;
+  font-weight: 700;
+}
+
+.content__btn {
+  position: absolute;
+  top: 3.75em;
+  right: 0;
+  display: flex;
+  width: 11.25em;
+  text-align: center;
+  align-items: center;
+  justify-content: space-around;
+}
+.content__btn :hover {
+  text-decoration: underline;
+}
+.content__btn .btns {
+  font-size: 0.94em;
+  border-radius: 0.31em;
+  color: #fff;
+  width: 100%;
+  line-height: 2em;
+  height: 100%;
+}
+
+.signup__btn {
+  background-color: #00704a;
+  border: 0.125em solid #00704a;
+}
+
+.login__btn {
+  margin-left: 10px;
+  border: 0.125em solid #fff;
+}
+
+.reward__gift {
+  position: relative;
+}
+.gift__text {
+  font-size: 0.875em;
+}
+
+.gift__text p {
+  line-height: 1.4;
+  font-weight: 600;
+}
+
+.gift__btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 0.125em solid #fff;
+  padding: 0em 0.44em;
+  border-radius: 0.31em;
+  width: 11.25em;
+  text-align: center;
+}
+.gift__btn a {
+  font-size: 0.94em;
+  color: #fff;
+  width: 100%;
+  line-height: 2em;
+  height: 100%;
+}
+.gift__btn :hover {
+  text-decoration: underline;
 }
