--- a/css/footer.css
+++ b/css/footer.css
@@ -8,8 +8,7 @@
 .footer_wrap {
   margin-left: -550px;
   width: 1100px;
-  background: url(https://www.starbucks.co.kr/common/img/footer/footer_logo.png)
-    right 8px no-repeat;
+  background: url(https://www.starbucks.co.kr/common/img/footer/footer_logo.png) right 8px no-repeat;
   display: inline-block;
   left: 50%;
   position: relative;
@@ -81,8 +80,7 @@
   display: inline-block;
   font-size: 12px;
   margin: 10px 2px 0 3px;
-  width: 90px;
-  height: 30px;
+  padding: 0 22px;
   line-height: 30px;
 }
 .copy_menu {
